# rustWsApp

./: .env.example  .gitignore  Cargo.toml  Dioxus.toml  PROJECT_STATUS.md  README.md  REFACTORING.md  SQLX_CLI_USAGE.md  TODO.md  docker-compose.yml  tailwind.css
.cargo/: config.toml
.claude/: settings.local.json
assets/: tailwind.css
docs/: S3_SETUP.md
migrations/: 20260103052522_employees_table.down.sql  20260103052522_employees_table.up.sql  20260103052523_company_master.down.sql  20260103052523_company_master.up.sql  20260103052524_master_tables.down.sql  20260103052524_master_tables.up.sql  20260103052525_clients.down.sql  20260103052525_clients.up.sql  20260103052526_employees.down.sql  20260103052526_employees.up.sql  20260103052527_licenses_qualifications.down.sql  20260103052527_licenses_qualifications.up.sql  20260103052528_vehicles.down.sql  20260103052528_vehicles.up.sql  20260105000001_unique_employee_code.down.sql  20260105000001_unique_employee_code.up.sql  20260109000001_add_s3_to_documents.down.sql  20260109000001_add_s3_to_documents.up.sql  20260117000001_fix_documents_nullable.down.sql  20260117000001_fix_documents_nullable.up.sql  README.md  verify_structure.sh
scripts/: clean_migration_history.sh  fix_migration.sql  reset_database.sql  reset_db.sh  reset_db_simple.sh  reset_migrations_only.sql
src/: db.rs  main.rs  routes.rs
src/components/: icon.rs  mod.rs  nav.rs  search_bar.rs  toast.rs
src/modules/: mod.rs
src/modules/addresses/: handlers.rs  mod.rs  models.rs  repository.rs
src/modules/addresses/components/: address_form.rs  mod.rs
src/modules/aptitude_checkup_history/: handlers.rs  mod.rs  models.rs  repository.rs
src/modules/bank_accounts/: handlers.rs  mod.rs  models.rs  repository.rs
src/modules/department_position_history/: handlers.rs  mod.rs  models.rs  repository.rs
src/modules/education_history/: handlers.rs  mod.rs  models.rs  repository.rs
src/modules/emergency_contacts/: handlers.rs  mod.rs  models.rs  repository.rs
src/modules/employee_documents/: handlers.rs  mod.rs  models.rs  repository.rs
src/modules/employee_documents/components/: document_list.rs  document_upload_form.rs  mod.rs
src/modules/employees/: actions.rs  handlers.rs  mod.rs  models.rs  page.rs  repository.rs  validation.rs
src/modules/employees/components/: code_input.rs  department_position_history_section.rs  employee_card.rs  employee_create_form.rs  employee_detail_page.rs  employee_detail_page.rs.backup  employee_edit_form.rs  employee_full_edit_form.rs  form_components.rs  labeled_text_input.rs  list_item.rs  mod.rs  name_input.rs
src/modules/employees/views/: create.rs  edit.rs  mod.rs  page.rs  right_panel.rs
src/modules/employment_history/: handlers.rs  models.rs  repository.rs
src/modules/example/: example.rs
src/modules/guidance_education_history/: handlers.rs  mod.rs  models.rs  repository.rs
src/modules/health_checkup_history/: handlers.rs  mod.rs  models.rs  repository.rs
src/modules/insurance_history/: handlers.rs  mod.rs  models.rs  repository.rs
src/modules/licenses/: handlers.rs  mod.rs  models.rs  repository.rs
src/modules/qualifications/: handlers.rs  mod.rs  models.rs  repository.rs
src/modules/residence_cards/: handlers.rs  mod.rs  models.rs  repository.rs
src/modules/s3_service/: mod.rs  service.rs
