[package]
name = "rust-ws-app"
version = "0.1.0"
authors = ["sei_shigeo <sei_shigeo@waseisyouji.net>"]
edition = "2021"

[dependencies]
# UIとフルスタック機能（常に必要）
dioxus = { version = "0.7.2", features = ["router", "fullstack"] }
# データのやり取りに必要（常に必要）
serde = { version = "1.0", features = ["derive"] }
# 日付・時刻の処理（常に必要）
chrono = { version = "0.4", features = ["serde"] }

# Web用の非同期タイマー（optional）
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

# サーバー側のみの依存関係（optional）
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "chrono",
], optional = true }
tokio = { version = "1.49", features = ["time", "rt"], optional = true }
dotenvy = { version = "0.15", optional = true }

[features]
default = ["web", "server"]
web = ["dioxus/web", "dep:gloo-timers"]
desktop = ["dioxus/desktop", "dep:tokio"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server", 
    "dep:sqlx", 
    "dep:dotenvy", 
    "dep:tokio", 
    "tokio/full"
]
